--- a/Stok_Takip/packages.config
+++ b/Stok_Takip/packages.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Dapper" version="2.0.35" targetFramework="net472" />
-  <package id="FontAwesome" version="4.7.0" targetFramework="net472" />
+  <package id="FontAwesome.Sharp" version="5.14.0" targetFramework="net472" />
 </packages>
