--- a/Stok_Takip/App.config
+++ b/Stok_Takip/App.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
 	<connectionStrings>
-		<add name="DB1" connectionString="Server=.;Database=DB1;Trusted_Connection=True;" providerName="System.Data.SqlClient"/>
+		<add name="DB1" connectionString="data source=(local);initial catalog=DB1;integrated security=True" providerName="System.Data.SqlClient"/>
 	</connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
