--- a/Stok_Takip/Stok_Takip.csproj
+++ b/Stok_Takip/Stok_Takip.csproj
@@ -33,7 +33,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
+    <OutputPath>bin\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -54,9 +54,16 @@
     <Reference Include="FontAwesome.Sharp, Version=5.14.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\FontAwesome.Sharp.5.14.0\lib\net472\FontAwesome.Sharp.dll</HintPath>
     </Reference>
+    <Reference Include="NLog, Version=4.0.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
+      <HintPath>..\packages\NLog.4.7.4\lib\net45\NLog.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.IO.Compression" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.ServiceModel" />
+    <Reference Include="System.Transactions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -69,9 +76,28 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DataAccessPersonel.cs" />
+    <Compile Include="DataAccessPersonelTakip.cs" />
+    <Compile Include="DataAccessProjeler.cs" />
     <Compile Include="DataAccessUrun.cs" />
     <Compile Include="Controller.cs" />
-    <Compile Include="DapperDeneme.cs" />
+    <Compile Include="DataAccessUrunTakip.cs" />
+    <Compile Include="Personel_Takip.cs" />
+    <Compile Include="Personel_Takip_Data.cs" />
+    <Compile Include="Projeler.cs" />
+    <Compile Include="Projeler_Form.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Projeler_Form.Designer.cs">
+      <DependentUpon>Projeler_Form.cs</DependentUpon>
+    </Compile>
+    <Compile Include="SQL_Commands.cs" />
+    <Compile Include="Urunler_Form.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Urunler_Form.Designer.cs">
+      <DependentUpon>Urunler_Form.cs</DependentUpon>
+    </Compile>
+    <Compile Include="MainProg.cs" />
     <Compile Include="Kategori.cs" />
     <Compile Include="Personel.cs" />
     <Compile Include="Personel_Form.cs">
@@ -93,7 +119,16 @@
       <DependentUpon>AnaSayfa.cs</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReadSerialPort.cs" />
     <Compile Include="Urun.cs" />
+    <Compile Include="Urun_Takip.cs" />
+    <Compile Include="Urun_Takip_Data.cs" />
+    <EmbeddedResource Include="Projeler_Form.resx">
+      <DependentUpon>Projeler_Form.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Urunler_Form.resx">
+      <DependentUpon>Urunler_Form.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Islemler.resx">
       <DependentUpon>Islemler.cs</DependentUpon>
     </EmbeddedResource>
@@ -115,6 +150,12 @@
     </Compile>
     <None Include="..\.editorconfig">
       <Link>.editorconfig</Link>
+    </None>
+    <Content Include="NLog.config">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <None Include="NLog.xsd">
+      <SubType>Designer</SubType>
     </None>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
