--- a/Stok_Takip/packages.config
+++ b/Stok_Takip/packages.config
@@ -2,4 +2,7 @@
 <packages>
   <package id="Dapper" version="2.0.35" targetFramework="net472" />
   <package id="FontAwesome.Sharp" version="5.14.0" targetFramework="net472" />
+  <package id="NLog" version="4.7.4" targetFramework="net472" />
+  <package id="NLog.Config" version="4.7.4" targetFramework="net472" />
+  <package id="NLog.Schema" version="4.7.4" targetFramework="net472" />
 </packages>
